[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-server"
description = "chatbot server"
authors = [{ name = "ytc", email = "your_email@example.com"  }]
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.14.0",
    "requests",
    "pydantic[email]",
    "langchain-core>=0.3.10",
    "langchain>=0.3.18",
    "langchain-openai==0.3.6",
]


[project.scripts]
app-run = "app.main:main"

